tests/regression/errors/basic/import_error_1.csd
// Import error test 1
yeet "nonexistent_module_1"
sus result drip = some_function(1)
